I give up. dark mode isn't worth it

--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "orientation": "landscape",
     "icon": "./assets/images/icon.png",
     "scheme": "dundrasync",
-    "userInterfaceStyle": "automatic",
+    "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true
