--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.anonymous.DundraSync'
+    namespace 'net.arkevorkhat.DundraSync'
     defaultConfig {
-        applicationId 'com.anonymous.DundraSync'
+        applicationId 'net.arkevorkhat.DundraSync'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
